; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_automation.c_create_file.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_automation.c_create_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GENERIC_WRITE = common dso_local global i32 0, align 4
@CREATE_ALWAYS = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"Failure to open file %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@FILE_CURRENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @create_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_file(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @GENERIC_WRITE, align 4
  %10 = load i32, i32* @CREATE_ALWAYS, align 4
  %11 = call i64 @CreateFileA(i8* %8, i32 %9, i32 0, i32* null, i32 %10, i32 0, i32* null)
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %14 = icmp ne i64 %12, %13
  %15 = zext i1 %14 to i32
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @ok(i32 %15, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = load i64, i64* %5, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @strlen(i8* %20)
  %22 = call i32 @WriteFile(i64 %18, i8* %19, i32 %21, i64* %6, i32* null)
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @strlen(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %25 = call i32 @WriteFile(i64 %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %24, i64* %6, i32* null)
  %26 = load i64, i64* %4, align 8
  %27 = load i8*, i8** %3, align 8
  %28 = call i64 @lstrlenA(i8* %27)
  %29 = sub nsw i64 %26, %28
  %30 = sub nsw i64 %29, 1
  store i64 %30, i64* %7, align 8
  %31 = load i64, i64* %5, align 8
  %32 = load i64, i64* %7, align 8
  %33 = load i32, i32* @FILE_CURRENT, align 4
  %34 = call i32 @SetFilePointer(i64 %31, i64 %32, i32* null, i32 %33)
  %35 = load i64, i64* %5, align 8
  %36 = call i32 @SetEndOfFile(i64 %35)
  %37 = load i64, i64* %5, align 8
  %38 = call i32 @CloseHandle(i64 %37)
  ret void
}

declare dso_local i64 @CreateFileA(i8*, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*, i8*) #1

declare dso_local i32 @WriteFile(i64, i8*, i32, i64*, i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @lstrlenA(i8*) #1

declare dso_local i32 @SetFilePointer(i64, i64, i32*, i32) #1

declare dso_local i32 @SetEndOfFile(i64) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
